# DN

./: DN.cabal  LICENSE  README.md  err.txt
.stack-work/install/4338eac8/flag-cache/: DN-0.1.0.0-8yMn8QkkcEWDg7GIz2sx1m  QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  random-1.1-54KmMHXjttlERYcr1mvsAe  tf-random-0.5-4z8OJUaXC1FRNfrLPFWAD
.stack-work/install/4338eac8/lib/x86_64-windows-ghc-8.0.1/DN-0.1.0.0-8yMn8QkkcEWDg7GIz2sx1m/: Lib.hi
.stack-work/install/4338eac8/pkgdb/: DN-0.1.0.0-8yMn8QkkcEWDg7GIz2sx1m.conf  package.cache
app/: Main.hs
src/: Lib.hs
src/DN/: Core.hs  ExternalLayer.hs  HiddenLayer.hs  Homework.hs  MotorLayer.hs  NetworkTypes.hs  SensorLayer.hs  Utils.hs
test/: Spec.hs
