name:                DN
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/DN#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Friede
maintainer:          friede80@gmail.com.com
copyright:           2016 Matt Friede
category:            Neural Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DN.Core
                       DN.NetworkTypes
                       DN.HiddenLayer
                       DN.ExternalLayer
                       DN.Utils
                       DN.Homework
  build-depends:       base >= 4.7 && < 5
                     , transformers
  default-language:    Haskell2010

executable DN-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DN
  default-language:    Haskell2010

test-suite DN-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DN
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/DN
